# mini-ml-training-platform

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: bootstrap_sample_dataset.py  run_validation.py
src/ml_platform/: __init__.py  cli.py  config.py  constants.py
src/ml_platform/data/: kitti.py  manifest.py  mining.py  profile.py  validation_datasets.py
src/ml_platform/deployment/: __init__.py  gates.py  package.py
src/ml_platform/inference/: __init__.py  api.py  predictor.py
src/ml_platform/orchestration/: retrain_watcher.py
src/ml_platform/registry/: mlflow_registry.py
src/ml_platform/training/: distributed.py  metrics.py  model.py  train.py
src/ml_platform/utils/: hashing.py  io.py  seeding.py
tests/: test_dataset_profile.py  test_deployment_gates.py  test_distributed.py  test_kitti.py  test_manifest.py  test_metrics.py  test_mining.py  test_validation_datasets.py
