[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "mini-ml-training-platform"
version = "0.1.0"
description = "A compact ML platform that demonstrates reproducible training, experiment tracking, model registry, and online inference."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [
  {name = "Michael Krasa"},
]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "mlflow>=2.16.0,<4.0.0",
  "numpy>=2.1.0,<3.0.0",
  "pillow>=11.0.0,<12.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "torch>=2.5.0,<3.0.0",
  "uvicorn[standard]>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
mini-ml-platform = "ml_platform.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_platform"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
